--- a/templates/social_app/index.html
+++ b/templates/social_app/index.html
@@ -1,5 +1,9 @@
-{% extends "social_app/base.html" %} 
-{% block content %}
+<!DOCTYPE html>
+<html>
+    <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    </head>
+    <body>
         <section>
         <div class="mask d-flex align-items-center h-100 gradient-custom-3">
             <div class="container h-100">
@@ -25,7 +29,7 @@
                             class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Log in</button>
                         </div>
 
-                        <p class="text-center text-muted mt-5 mb-0">Don't have an account? <a href="login.html" class="fw-bold text-body"><u>Sign up here</u></a></p>
+                        <p class="text-center text-muted mt-5 mb-0">Don't have an account? <a href="registration.html" class="fw-bold text-body"><u>Sign up here</u></a></p>
                     </form>
                     </div>
                 </div>
@@ -34,4 +38,4 @@
             </div>
         </div>
         </section>
-        {% endblock content %}
+        </body>
