--- a/templates/social_app/registration.html
+++ b/templates/social_app/registration.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
-        {% extends "social_app/base.html" %} 
-        {% block content %}
+        
+        
         <section>
   <div class="mask d-flex align-items-center h-100 gradient-custom-3">
     <div class="container h-100">
@@ -61,6 +61,6 @@
     </div>
   </div>
 </section>
-        {% endblock %}
+      
     </body>
 </html>
