--- a/templates/social_app/base.html
+++ b/templates/social_app/base.html
@@ -6,31 +6,57 @@
     <body>
         {% load static %}
         
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                </ul>
-                <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-              </div>
-            </div>
-          </nav>
+        <header>
+  <nav class="navbar navbar-dark bg-success navbar-expand-sm fixed-top">
+    <a class="navbar-brand" href="{% url 'login' %}">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3cZfGzcDgrIlm9MHNFNHlW1cKq54JDqAYOA&usqp=CAU" width="30" height="30" alt="logo">
+      Framedoor
+    </a>
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      {% if user.is_authenticated %}
+
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="{% url 'login' %}">Home</a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="">Hi {{ user.username }}!</a>
+      </li>
+     
+    </ul>
+¨
+    <div class="collapse navbar-collapse justify-content-end" id="navbar-list-4">
+      <form class="collapse navbar-collapse justify-content-end" action="" method="POST">
+        {% csrf_token %}
+      <div class="input-group rounded" style="width:30%; height:70%">
+        <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" id="searched" name="searched"/>
+        <button class="input-group-text border-0" id="search-addon">
+          <i class="fa fa-search"></i>
+        </button>
+      </div>
+    </form>
+      <ul class="navbar-nav ">
+          <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <img src="{{ user.profile.profile_pic.url }}" width="40" height="40" class="rounded-circle">
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="#">Edit Profile</a>
+            <a class="dropdown-item" href="{% url 'logout' %}">Log Out</a>
+          </div>
+        </li>   
+      </ul>
+    </div>
+    {% endif %}
+  </nav>
+  </header>
           
           <br>
-          {% block content %}
-          {% endblock %}
+          <div id="content-wrap">
+{% block content %}
+
+{% endblock %}
+
+</div>
     </body>
 </html>
