--- a/templates/social_app/base.html
+++ b/templates/social_app/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"> -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -10,6 +10,7 @@
     </head>
     <body>
         {% load static %}
+        {% load staticfiles %}
         
         <header>
   <nav class="navbar navbar-dark bg-success navbar-expand-sm fixed-top" >
@@ -27,7 +28,7 @@
       <li class="nav-item">
         <a class="nav-link" href="">Hi {{ user.username }}!</a>
       </li>
-     
+    
     </ul>
 ¨
     <div class="collapse navbar-collapse justify-content-end" id="navbar-list-4">
@@ -40,6 +41,10 @@
         </button>
       </div>
     </form>
+
+    
+        <a class="nav-item nav-link" aria-current="page" href="#">Notifications</a>
+      
       
       <ul class="navbar-nav ">
           <li class="nav-item dropdown">
