--- a/users/templates/users/user_profile.html
+++ b/users/templates/users/user_profile.html
@@ -7,42 +7,75 @@
 
 <div class="col-md-8 m-auto">
 
-<div class="content-section">
+    <div class="content-section">
+        
+        <div class="account-img-container">
+            <div class="img-cont">
+                <img class="rounded-circle account-img mx-auto d-block" src="{{user.profile.profile_pic.url}}" alt="image">
+                
+            </div>
+        </div>
+        <hr tyle="height:3px;border-width:0;color:gray;background-color:gray">
+        <div class="card-body">
+            
+            <h4 class="card-title text-center">{{user.first_name}} {{user.last_name}} [{{user.username}}]</h4>
+            
+            <div class="d-flex flex-row bd-highlight mb-3 justify-content-center">
+                <a href="{% url 'users:all_profiles' %}" class="btn btn-success d-flex mb-3 justify-content">See all Profiles</a>
+                <a href="{% url 'user:add_post' %}" class="btn btn-success d-flex mb-3 justify-content"> Post</a>
+                <a href="#" class="btn btn-success d-flex mb-3 justify-content"></a>
+            </div>
+
+            <hr tyle="height:3px;border-width:0;color:gray;background-color:gray">
+
+            <div class="m-t-10 p-20 text-center">
+                <div class="row">
+                    <div class="col">
+                        <span class="h6">Posts</span>
+                        <p><a class="mr-2" href=""></a></p>
+                    </div>
+                    
+                    <div class="col">
+                        <span class="h6">Followers</span>
+                        <p>{{user.following.count}}</p>
+                    </div>
+                    <div class="col">
+                        <span class="h6">Following</span>
+                        <p>{{user.profile.following.count}}</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
     
-      <div class="account-img-container">
-          <div class="img-cont">
-            <img class="rounded-circle account-img" src="{{user.profile.profile_pic.url}}" alt="image">
+    </div>
+</div>
+<div class="container mt-5 mb-3">
+  <div class="row">
+
+    <h1>Hello {{post_list.author}}</h1>
+    {% for post in post_list %}
+    <div class="card shadow " style="width: 20rem; height: 30rem;" >
+         
+
+          <div class="card-body" style="overflow:hidden;">
+            <h5 class="card-title">{{post.author}}</h5>
+            <p class="card-text">{{ post.post_content | truncatechars:50}}</p>
             
           </div>
-      </div>
-      <div class="card-body">
-          <hr>
-          <h4 class="card-title text-center">{{user.first_name}} {{user.last_name}} [{{user.username}}]</h4>
           
-    
-          <hr>
-          <div class="m-t-10 p-20 text-center">
-              <div class="row">
-                  <div class="col">
-                      <span class="h6">Posts</span>
-                      <p><a class="mr-2" href=""></a></p>
-                  </div>
-                  
-                  <div class="col">
-                      <span class="h6">Followers</span>
-                      <p>{{user.following.count}}</p>
-                  </div>
-                  <div class="col">
-                      <span class="h6">Following</span>
-                      <p>{{user.profile.following.count}}</p>
-                  </div>
-              </div>
+
+          <div class="card-footer" style="border-top:none">
+            {% if post.author.id == request.user.id %}
+          <div class="d-flex flex-row justify-content-end mt-auto">
+            <a href="#" class="btn btn-success d-flex justify-content-end">Edit Post <a href="#" class="btn btn-danger mx-4">Delete</a></a>
+            </div> 
+          {% endif %}
+
           </div>
-      </div>
-    
- 
-</div>
-</div>
+
+    </div>
+    {% endfor %}
 
 {% endblock %}
 
