--- a/users/templates/users/user_profile.html
+++ b/users/templates/users/user_profile.html
@@ -54,9 +54,9 @@
   <div class="row">
 
     {% for post in post_list %}
-    <div class="card shadow " style="width: 20rem; height: 30rem;" >
+    <div class="card shadow " style="width: 20rem; height: 23rem;" >
          
-        
+        <img src="{{ post.blog_pics.url }}" class="card-img-top" alt="..." height="150px" width="150px">
           <div class="card-body" style="overflow:hidden;">
             <h5 class="card-title">{{post.author}}</h5> 
             <p class="card-text">{{ post.post_content | truncatechars:50}}</p>
@@ -75,7 +75,7 @@
 
     </div>
     {% endfor %} 
-
+<br><br>
 {% endblock %}
 
 
