--- a/templates/social_app/base.html
+++ b/templates/social_app/base.html
@@ -1,75 +1,221 @@
-<!DOCTYPE html>
+{% load static %}
+{% load staticfiles %}
+
 <html>
-    <head>
-        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"> -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    </head>
-    <body>
-        {% load static %}
-        {% load staticfiles %}
-        
-        <header>
-  <nav class="navbar navbar-dark bg-success navbar-expand-sm fixed-top" >
-    <a class="navbar-brand" href="{% url 'login' %}">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3cZfGzcDgrIlm9MHNFNHlW1cKq54JDqAYOA&usqp=CAU" width="30" height="30" alt="logo">
-      Framedoor
-    </a>
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      {% if user.is_authenticated %}
+<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropper/4.1.0/cropper.css" integrity="sha512-iAcZ4OrGhQ7KDqtM+LMc+iuv63aJ9O7hPyWBzCXsrZYuhJ6jhdeh40+hf9o4QmZVu8QrH/cWy/JTmoKNOL4Urw==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="{% static 'social_app/main.css' %}">
+    <title>Frame Door | {% block title %}{% endblock %}</title>
 
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="{% url 'login' %}">Home</a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" href="">Hi {{ user.username }}!</a>
-      </li>
-    
-    </ul>
-¨
-    <div class="collapse navbar-collapse justify-content-end" id="navbar-list-4">
-      <form class="collapse navbar-collapse justify-content-end" action="" method="POST">
-        {% csrf_token %}
-      <div class="input-group rounded" style="width:30%; height:70%">
-        <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" id="searched" name="searched"/>
-        <button class="input-group-text border-0" id="search-addon">
-          <i class="fa fa-search"></i>
-        </button>
-      </div>
-    </form>
-
-    
-        <a class="nav-item nav-link" aria-current="page" href="#">Notifications</a>
-      
-      
-      <ul class="navbar-nav ">
-          <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <img src="{{ user.profile.profile_pic.url }}" width="40" height="40" class="rounded-circle">
-          </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="{% url 'users:editprofile' %}">Edit Profile</a>
-            <a class="dropdown-item" href="{% url 'logout' %}">Log Out</a>
-          </div>
-        </li>   
-      </ul>
-    </div>
-    {% endif %}
-  </nav>
+</head>
+<body>
+  <header class="site-header">
+        <!-- NAVBAR -->
+        {% include 'social_app/navbar.html' %}
   </header>
+  <!-- MAIN SECTION -->
+  <main role="main" class="container">
+    <div class="row">
+
+        <!-- MESSAGES -->
+        <div class="col-md-8 m-auto">
+          {% if messages %}
+            {% for message in messages %}
+              <div class="alert {{ message.tags }}">
+                {{message}}
+              </div>
+            {% endfor %}
+          {% endif %}           
+        </div>
+
+        
+        {% block content %}{% endblock %}
+        
+
+    </div>
+  </main>
+ <!-- SCRIPTS -->
+      <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/cropper/4.1.0/cropper.min.js" integrity="sha512-E+gDQcIvNXE60SjCS38ysf1mGh4ObBpKcUOp0oEaHQHQAdaN2p7GelOpgEdpTuCLoIJyLkNXiqFZbyD9Ak/Ygw==" crossorigin="anonymous"></script>
+      
+      <script>
+        $(function () {
+    
+          /* SCRIPT TO OPEN THE MODAL WITH THE PREVIEW */
+          $("#id_image").change(function () {
+            if (this.files && this.files[0]) {
+              var reader = new FileReader();
+              reader.onload = function (e) {
+                $("#image").attr("src", e.target.result);
+                $("#modalCrop").modal('show');
+              }
+              reader.readAsDataURL(this.files[0]);
+            }
+          });
+    
+          /* SCRIPTS TO HANDLE THE CROPPER BOX */
+          var $image = $("#image");
+          var cropBoxData;
+          var canvasData;
+          $("#modalCrop").on("shown.bs.modal", function () {
+            $image.cropper({
+              viewMode: 1,
+              aspectRatio: 1/1,
+              minCropBoxWidth: 200,
+              minCropBoxHeight: 200,
+              ready: function () {
+                $image.cropper("setCanvasData", canvasData);
+                $image.cropper("setCropBoxData", cropBoxData);
+              }
+            });
+          }).on("hidden.bs.modal", function () {
+            cropBoxData = $image.cropper("getCropBoxData");
+            canvasData = $image.cropper("getCanvasData");
+            $image.cropper("destroy");
+            location.reload();
+          });
+    
+          $(".js-zoom-in").click(function () {
+            $image.cropper("zoom", 0.1);
+          });
+    
+          $(".js-zoom-out").click(function () {
+            $image.cropper("zoom", -0.1);
+          });
+    
+          /* SCRIPT TO COLLECT THE DATA AND POST TO THE SERVER */
+          $(".js-crop-and-upload").click(function () {
+            var cropData = $image.cropper("getData");
+            // console.log(cropData);
+            $("#id_x").val(cropData["x"]);
+            $("#id_y").val(cropData["y"]);
+            $("#id_height").val(cropData["height"]);
+            $("#id_width").val(cropData["width"]);
+            $("#formUpload").submit();
+          });
+    
+        });
+      </script>
+
+      <script type="text/javascript">
+
+        $(document).ready(function(event){
           
-          <br>
-          <div id="content-wrap">
-{% block content %}
+          // $("#chat-box").scrollTop($("#chat-box")[0].scrollHeight);
 
-{% endblock %}
+          // LIKE POSTS
 
-</div>
+          $(document).on('click','#like',function(event){
+            event.preventDefault();
+            var pk = $(this).attr('value');
+            $.ajax({
+              type: 'POST',
+              url: '{% url "social_app:post-like" %}',
+              data: {'id':pk, 'csrfmiddlewaretoken':'{{ csrf_token }}'},
+              dataType: 'json',
+              success: function(response){
+                  $('#like-section').html(response['form']);
+                  console.log($('#like-section').html(response['form']));
+              },
+              error: function(rs, e){
+                  console.log(rs.responseText);
+              },
+            });
+          });
 
-{% block script %}{% endblock %}
-    </body>
+          // COMMENT LIKE
+
+          $(document).on('click','.clike',function(event){
+            event.preventDefault();
+            var pk = $(this).attr('value');
+            $.ajax({
+              type: 'POST',
+              url: "{% url 'social_app:comment-like' %}",
+              data: {'id':pk, 'pid':'{{post.pk}}', 'csrfmiddlewaretoken':'{{ csrf_token }}'},
+              dataType: 'json',
+              success: function(response){
+                  $('.main-comment-section').html(response['form']);
+                  console.log($('.main-comment-section').html(response['form']));
+              },
+              error: function(rs, e){
+                  console.log(rs.responseText);
+              },
+            });
+          });
+
+          // SAVE POSTS
+
+          $(document).on('click','#save',function(event){
+            event.preventDefault();
+            var pk = $(this).attr('value');
+            $.ajax({
+              type: 'POST',
+              url: '{% url "social_app:post-save" %}',
+              data: {'id':pk, 'csrfmiddlewaretoken':'{{ csrf_token }}'},
+              dataType: 'json',
+              success: function(response){
+                  $('#save-section').html(response['form']);
+                  console.log($('#save-section').html(response['form']));
+              },
+              error: function(rs, e){
+                  console.log(rs.responseText);
+              },
+            });
+          });
+
+          // COMMENT FORM
+
+          $(document).on('submit','.comment-form', function(event){
+            event.preventDefault();
+            console.log($(this).serialize());
+            $.ajax({
+              type: 'POST',
+              url: $(this).attr('action'),
+              data: $(this).serialize(),
+              dataType: 'json',
+              success: function(response){
+                $('.main-comment-section').html(response['form']);
+                console.log(response['form'])
+                $('textarea').val('');
+              },
+              error: function(rs, e){
+                console.log(rs.responseText);
+              },
+            });
+          });
+
+          // REPLY FORM
+
+          $(document).on('submit','.reply-form', function(event){
+            event.preventDefault();
+            console.log($(this).serialize());
+            $.ajax({
+              type: 'POST',
+              url: $(this).attr('action'),
+              data: $(this).serialize(),
+              dataType: 'json',
+              success: function(response){
+                $('.main-comment-section').html(response['form']);
+                console.log(response['form'])
+                $('textarea').val('');
+              },
+              error: function(rs, e){
+                console.log(rs.responseText);
+              },
+            });
+          });
+
+        });
+
+
+      </script>
+
+      {% block script %}{% endblock %}
+
+</body>
 </html>
