--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -15,7 +15,7 @@
         <h3>login</h3>
         <span class="arrow-down login--header__arrow"></span>
     </header>
-    <form action="{% url 'login' %}" method="POST">
+    <form action="{% url 'users:login' %}" method="POST">
         {% csrf_token %}
         <div class="form-group">
         	<div class="input-group">
@@ -27,6 +27,7 @@
                 <input type="text" class="form-control" placeholder="Username" required="required" name="username">
             </div>
         </div>
+        <br>
 		<div class="form-group">
             <div class="input-group">
                 <div class="input-group-prepend">
@@ -37,14 +38,16 @@
                 <input type="password" class="form-control" placeholder="Password" required="required" name="password">
             </div>
         </div>        
+        <br>
         <div class="form-group">
             <button type="submit" class="btn btn-success btn-block">Log in</button>
         </div>
+        <br>       
         <div class="bottom-action clearfix">
             <label class="float-left form-check-label"><input type="checkbox"> Remember me</label>
             <a href="#" class="float-right">Forgot Password?</a>
-        </div>        
+        </div> 
     </form>
-    <p class="text-center medium" >Don't have an account! <a href="{% url 'register' %}">Sign up here</a>.</p>
+    <p class="text-center medium" >Don't have an account! <a href="{% url 'users:register' %}">Sign up here</a>.</p>
 </div>
         </body>
