--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -11,7 +11,7 @@
 {% if registered %}
 <br><br><br>
     <h1>Thank you for Signing Up</h1>
-        Do you want to log in? <a href="{% url 'home' %}">Login</a>
+        Do you want to log in? <a href="{% url 'users:login' %}">Login</a>
 
       {% else %}
 <div class="login-form login">
@@ -20,7 +20,7 @@
         <h3>Register</h3>
         <span class="arrow-down login--header__arrow"></span>
     </header>
-    <form action="{% url 'register' %}" method="POST" enctype="multipart/form-data">
+    <form action="{% url 'users:register' %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
 
         <div class="row">
@@ -42,7 +42,7 @@
                     <input type="text" name="username" id="username" class="form-control input-sm" placeholder="User Name">
                 </div>
             </div>
-            <br>
+            <br><br>
             <div class="input-group">
                 <input type="email" class="form-control" placeholder="E-mail" name="email">
             </div>
@@ -108,7 +108,7 @@
             </div>
             <div class="col-xs-6 col-sm-6 col-md-6">
                 <div class="form-group">
-                    <a href="{% url 'home' %}" class="form-control btn btn-danger btn-block">Cancel</a>
+                    <a href="{% url 'social_app:firsthome' %}" class="form-control btn btn-danger btn-block">Cancel</a>
                 </div>
             </div>
 
