changed colours in the login and registration
Modified first.html page

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <br><br><br>
-        <h1 class="text-center mb-5 text-success">Framedoor</h1>
+        <h1 class="text-center mb-5 text-primary">Framedoor</h1>
         <div class="login-form login">
     <header class="login--header text-center">
         <span class="icon icon-medium fa fa-lock"></span>
@@ -40,7 +40,7 @@
         </div>        
         <br>
         <div class="form-group">
-            <button type="submit" class="btn btn-success btn-block">Log in</button>
+            <button type="submit" class="btn btn-primary btn-block">Log in</button>
         </div>
         <br>       
         <div class="bottom-action clearfix">
