--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -103,7 +103,7 @@
         <div class="row" style="margin-top:20px;">
             <div class="col-xs-6 col-sm-6 col-md-6">
                 <div class="form-group">
-                    <button type="submit" class="form-control btn btn-success btn-block">Register</button>
+                    <button type="submit" class="form-control btn btn-primary btn-block">Register</button>
                 </div>
             </div>
             <div class="col-xs-6 col-sm-6 col-md-6">
