--- a/users/static/css/basicstyle.css
+++ b/users/static/css/basicstyle.css
@@ -56,7 +56,7 @@ h4 {
 }
 
 .login .arrow-down {
-    border-top: 20px solid #279e7a;
+    border-top: 20px solid #28b346;
 }
 
 
@@ -64,7 +64,7 @@ h4 {
     padding: .7em 0;
     color: #fff;
     position: relative;
-    background-color: #279e7a;
+    background-color: #28b346;
 }
 
 .login--header h3 {
