--- a/users/templates/users/all_profiles.html
+++ b/users/templates/users/all_profiles.html
@@ -4,76 +4,28 @@
 
 {% block content %}
 
-<br><br><br>
-
 <div class="col-md-8 m-auto">
 
-    <div class="content-section">
-        
-        <div class="account-img-container">
-            <div class="img-cont ">
-                <img class="rounded-circle account-img mx-auto d-block" src="{{user.profile.profile_pic.url}}" alt="image">
-                
-            </div>
-        </div>
-        <hr tyle="height:3px;border-width:0;color:gray;background-color:gray">
-        <div class="card-body">
-            
-            <h4 class="card-title text-center"><a href="{% url 'login' %}" >{{user.first_name}} {{user.last_name}} [{{user.username}}] </a></h4>
-            
-            
-            
-            <hr tyle="height:3px;border-width:0;color:gray;background-color:gray">
-
-            <div class="m-t-10 p-20 text-center">
-                <div class="row">
-                    <div class="col">
-                        <span class="h6">Posts</span>
-                        <p><a class="mr-2" href=""></a></p>
-                    </div>
-                    
-                    <div class="col">
-                        <span class="h6">Followers</span>
-                        <p>{{user.following.count}}</p>
-                    </div>
-                    <div class="col">
-                        <span class="h6">Following</span>
-                        <p>{{user.profile.following.count}}</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        
-    
-    </div>
-</div>
-
-<div class="container mt-5 mb-3">
-    <div class="row">
 {% for profile in profiles %}
 <div class="content-section">
-    <div class="card-body" style="overflow:hidden;">
-        
-      </div>
-</div>
-<br><br>
-<div class="card shadow " style="width: 15rem; height: 20rem;" >
-    
-    <img src="{{profile.profile_pic.url}}" class="card-img-top" alt="..." height="150px" width="150px">
-
-    <div class="card-body" style="overflow:hidden;">
-        <h4><a href="{% url 'users:user_profile_details' profile.id %}">{{profile}}</a></h4>
-        <h4 class="card-title text-center">{{object.profile.first_name}} {{object.profile.last_name}} [{{object.user.username}}] </h4>
-      
-      
-    </div>
-    
+    <a href="{% url 'users:profile-detail-view' profile.pk %}">{{profile}}</a>
 </div>
 {% endfor %}
 
-</div>
-</div>
 
-
+<!-- SIDEBAR -->
+<!-- <div class="col-md-4">
+    <div class="content-section">
+        <h3>Our Sidebar</h3>
+        <p class="text-muted">You can put any information here you'd like.
+            <ul class="list-group">
+                <li class="list-group-item list-group-item-light">Latest Posts</li>
+                <li class="list-group-item list-group-item-light">Announcements</li>
+                <li class="list-group-item list-group-item-light">Calendars</li>
+                <li class="list-group-item list-group-item-light">etc</li>
+            </ul>
+        </p>
+    </div>
+</div>   -->
 
 {% endblock %}
