updated the settings profile
for the image part

--- a/users/templates/users/user_profile.html
+++ b/users/templates/users/user_profile.html
@@ -82,7 +82,7 @@
 {% block script %}
     <script>
         function picupload(){
-            const imgf = document.getElementById('id_image')
+            const imgf = document.getElementById('id_profile_pic')
             imgf.click()
         }
     </script>
