--- a/templates/social_app/feeds.html
+++ b/templates/social_app/feeds.html
@@ -33,6 +33,8 @@
     <hr>
     <h3><a class="article-title" href="{% url 'social_app:post-detail' post.id %}">{{ post.title }}</a></h3>
     <hr>
+          <img src="{{ post.photo_url }}" class="card-img-top" alt="..." height="200px" width="50px">
+          <hr>
       <p class="article-content">{{ post.content|safe|linebreaks|truncatewords_html:"20" }}<a href="{% url 'social_app:post-detail' post.id %}">[Read full post]</a></p>
     </article>
     {% endfor %}
