--- a/templates/social_app/home.html
+++ b/templates/social_app/home.html
@@ -17,8 +17,14 @@
               </div>
           </div>
           <hr>
+          
+          
           <h3><a class="article-title" href="{% url 'social_app:post-detail' post.id %}">{{ post.title }}</a></h3>
           <hr>
+          {% if post.blog_pic %}
+          <img src="{{ post.photo_url }}" class="card-img-top" alt="..." height="200px" width="50px">
+          <hr>
+          {% endif %}
           <p class="article-content">{{ post.content|safe|linebreaks|truncatewords_html:"20" }}<a href="{% url 'social_app:post-detail' post.id %}" class="text-success">[Read full post]</a></p>
         </article>
         
