--- a/friend/templates/friend/friend_requests.html
+++ b/friend/templates/friend/friend_requests.html
@@ -51,7 +51,7 @@
 				<div class="media-body">
 					<div class="inline float-left">
 						<p>
-							<a class="mr-2 h4" href="{% url 'users:profile-detail-view' pk=request.sender.id %}">{{request.sender.username}}</a>
+							<a class="mr-2 h4 text-success" href="{% url 'users:profile-detail-view' pk=request.sender.id %}">{{request.sender.username}}</a>
 						</p>
 						<small class="text-muted">{{request.timestamp}}</small>
 					</div>
@@ -72,21 +72,6 @@
 </div>
 
 </div>
-
-<!-- SIDEBAR -->
-<div class="col-md-4">
-    <div class="content-section">
-        <h3>Our Sidebar</h3>
-        <p class="text-muted">You can put any information here you'd like.
-            <ul class="list-group">
-                <li class="list-group-item list-group-item-light">Latest Posts</li>
-                <li class="list-group-item list-group-item-light">Announcements</li>
-                <li class="list-group-item list-group-item-light">Calendars</li>
-                <li class="list-group-item list-group-item-light">etc</li>
-            </ul>
-        </p>
-    </div>
-</div>  
 
 {% endblock %}
 
