--- a/users/templates/users/all_profiles.html
+++ b/users/templates/users/all_profiles.html
@@ -19,7 +19,7 @@
         <hr tyle="height:3px;border-width:0;color:gray;background-color:gray">
         <div class="card-body">
             
-            <h4 class="card-title text-center"><a href="{% url 'users:login' %}" >{{user.first_name}} {{user.last_name}} [{{user.username}}] </a></h4>
+            <h4 class="card-title text-center "><a class="text-success" href="{% url 'users:login' %}" >{{user.first_name}} {{user.last_name}} [{{user.username}}] </a></h4>
                                    
             <hr tyle="height:3px;border-width:0;color:gray;background-color:gray">
 
@@ -27,7 +27,7 @@
                 <div class="row">
                     <div class="col">
                         <span class="h6">Posts</span>
-                        <p><a class="mr-2" href=""> {{user.profile.profile_posts.count}}</a></p>
+                        <p><a class="mr-2 text-success" href=""> {{user.profile.profile_posts.count}}</a></p>
                     </div>
                     
                     <div class="col">
@@ -56,7 +56,7 @@
                 
                 <img src="{{profile.profile_pic.url}}"  class="card-img-top rounded-circle account-img mx-auto d-block" alt="..." height="150px" width="150px">
 
-                <small class="card-title text-center"><a href="{% url 'users:profile-detail-view' profile.pk %}" >{{profile.user.first_name}} {{profile.user.last_name}} [{{profile.user.username}}] </a></small>
+                <small class="card-title text-center"><a class="text-success" href="{% url 'users:profile-detail-view' profile.pk %}" >{{profile.user.first_name}} {{profile.user.last_name}} [{{profile.user.username}}] </a></small>
                                    
                 <hr style="height:3px;border-width:0;color:gray;background-color:gray">
     
